# bci-brake

./: .gitignore  README.md  pyproject.toml
dist_data/: x_features.json
docs/: experiments.md
src/bci_brake/: __init__.py  constants.py  data.py  eval.py  main.py  model.py  scratch.py  train.py  viz.py
