[project]
name = "bci_brake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "joshfisher", email = "joshfisher81@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "mat73>=0.65",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
